--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint-config-google": "^0.5.0",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-mocha": "^2.2.0",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.0",
     "requirejs": "^2.2.0",
+    "to-iso-string": "0.0.2",
     "typescript": "^1.8.10",
     "typings": "^1.0.4"
   }
