--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Calendrical calculations in JavaScript",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -fr build node_modules spec/build typings",
+    "clean": "rm -fr build node_modules spec/build typings spec/typings",
     "test": "mocha spec/*/*.spec.ts"
   },
   "author": "",
