--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -19,6 +19,7 @@
         "astro/astro.spec.ts",
         "calendar/armenian.spec.ts",
         "calendar/bahai.spec.ts",
+        "calendar/coptic.spec.ts",
         "calendar/french.spec.ts",
         "calendar/egyptian.spec.ts",
         "calendar/gregorian.spec.ts",
