--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -20,6 +20,7 @@
         "calendar/armenian.spec.ts",
         "calendar/bahai.spec.ts",
         "calendar/coptic.spec.ts",
+        "calendar/ethiopic.spec.ts",
         "calendar/french.spec.ts",
         "calendar/egyptian.spec.ts",
         "calendar/gregorian.spec.ts",
