ISO Week calendar added.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
         "src/ts/Calendrical/calendar/HinduSolarModernCalendar.ts",
         "src/ts/Calendrical/calendar/HinduSolarOldCalendar.ts",
         "src/ts/Calendrical/calendar/IslamicCalendar.ts",
+        "src/ts/Calendrical/calendar/IsoWeekCalendar.ts",
         "src/ts/Calendrical/calendar/JulianCalendar.ts",
         "src/ts/Calendrical/calendar/MayanCountCalendar.ts",
         "src/ts/Calendrical/calendar/MayanHaabCalendar.ts",
