Added Islamic Observational calendar.

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -33,6 +33,7 @@
         "calendar/hindu.solar.modern.spec.ts",
         "calendar/hindu.solar.old.spec.ts",
         "calendar/islamic.spec.ts",
+        "calendar/islamic.observational.spec.ts",
         "calendar/isoweek.spec.ts",
         "calendar/julian.spec.ts",
         "calendar/mayan.count.spec.ts",
