--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -18,6 +18,7 @@
     "files": [
         "astro/astro.spec.ts",
         "calendar/armenian.spec.ts",
+        "calendar/aztec.xihuitl.spec.ts",
         "calendar/bahai.spec.ts",
         "calendar/balinese.pawukon.spec.ts",
         "calendar/coptic.spec.ts",
