--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
         "src/ts/Calendrical/calendar/AztecXihuitlCalendar.ts",
         "src/ts/Calendrical/calendar/BahaiCalendar.ts",
         "src/ts/Calendrical/calendar/BalinesePawukonCalendar.ts",
+        "src/ts/Calendrical/calendar/ChineseCalendar.ts",
         "src/ts/Calendrical/calendar/CopticCalendar.ts",
         "src/ts/Calendrical/calendar/EgyptianCalendar.ts",
         "src/ts/Calendrical/calendar/EthiopicCalendar.ts",
