--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "calendrical",
   "version": "0.0.1",
   "description": "Calendrical calculations in JavaScript",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/catull/calendariale.git"
+  },
   "main": "index.js",
   "scripts": {
     "clean": "rm -fr build node_modules spec/build typings spec/typings",
