Added French Arithmetic calendar.

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -25,7 +25,8 @@
         "calendar/chinese.spec.ts",
         "calendar/coptic.spec.ts",
         "calendar/ethiopic.spec.ts",
-        "calendar/french.spec.ts",
+        "calendar/french.arithmetic.spec.ts",
+        "calendar/french.revolutionary.spec.ts",
         "calendar/egyptian.spec.ts",
         "calendar/gregorian.spec.ts",
         "calendar/hebrew.spec.ts",
