--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
         "src/ts/Calendrical/calendar/BahaiCalendar.ts",
         "src/ts/Calendrical/calendar/BalinesePawukonCalendar.ts",
         "src/ts/Calendrical/calendar/ChineseCalendar.ts",
+        "src/ts/Calendrical/calendar/ChineseDayNameCalendar.ts",
         "src/ts/Calendrical/calendar/CopticCalendar.ts",
         "src/ts/Calendrical/calendar/EgyptianCalendar.ts",
         "src/ts/Calendrical/calendar/EthiopicCalendar.ts",
