Corrected package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calendrical",
+  "name": "calendariale",
   "version": "0.0.1",
   "description": "Calendrical calculations in JavaScript",
   "repository": {
