Refactor source layout.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "experimentalDecorators": true,
         "sourceMap": true,
         "listFiles": false,
-        "outDir": "build/Calendrical/"
+        "outDir": "build/"
     },
     "exclude": [
         "build",
@@ -17,42 +17,42 @@
         "spec"
     ],
     "files": [
-        "src/ts/Calendrical/Const.ts",
-        "src/ts/Calendrical/Astro.ts",
-        "src/ts/Calendrical/Calendar.ts",
-        "src/ts/Calendrical/HinduAlgorithms.ts",
-        "src/ts/Calendrical/calendar/ArmenianCalendar.ts",
-        "src/ts/Calendrical/calendar/AztecTonalpohualliCalendar.ts",
-        "src/ts/Calendrical/calendar/AztecXihuitlCalendar.ts",
-        "src/ts/Calendrical/calendar/BahaiCalendar.ts",
-        "src/ts/Calendrical/calendar/BalinesePawukonCalendar.ts",
-        "src/ts/Calendrical/calendar/ChineseCalendar.ts",
-        "src/ts/Calendrical/calendar/ChineseDayNameCalendar.ts",
-        "src/ts/Calendrical/calendar/CopticCalendar.ts",
-        "src/ts/Calendrical/calendar/EgyptianCalendar.ts",
-        "src/ts/Calendrical/calendar/EthiopicCalendar.ts",
-        "src/ts/Calendrical/calendar/FrenchArithmeticCalendar.ts",
-        "src/ts/Calendrical/calendar/FrenchRevolutionaryCalendar.ts",
-        "src/ts/Calendrical/calendar/GregorianCalendar.ts",
-        "src/ts/Calendrical/calendar/HebrewCalendar.ts",
-        "src/ts/Calendrical/calendar/HebrewObservationalCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduLunarAstroCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduLunarModernCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduLunarOldCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduSolarAstroCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduSolarModernCalendar.ts",
-        "src/ts/Calendrical/calendar/HinduSolarOldCalendar.ts",
-        "src/ts/Calendrical/calendar/IslamicCalendar.ts",
-        "src/ts/Calendrical/calendar/IslamicObservationalCalendar.ts",
-        "src/ts/Calendrical/calendar/IsoWeekCalendar.ts",
-        "src/ts/Calendrical/calendar/JulianCalendar.ts",
-        "src/ts/Calendrical/calendar/MayanCountCalendar.ts",
-        "src/ts/Calendrical/calendar/MayanHaabCalendar.ts",
-        "src/ts/Calendrical/calendar/MayanTzolkinCalendar.ts",
-        "src/ts/Calendrical/calendar/PersianArithmeticCalendar.ts",
-        "src/ts/Calendrical/calendar/PersianAstronomicalCalendar.ts",
-        "src/ts/Calendrical/calendar/RomanCalendar.ts",
-        "src/ts/Calendrical/calendar/TibetanCalendar.ts"
+        "src/Const.ts",
+        "src/Astro.ts",
+        "src/Calendar.ts",
+        "src/HinduAlgorithms.ts",
+        "src/calendar/ArmenianCalendar.ts",
+        "src/calendar/AztecTonalpohualliCalendar.ts",
+        "src/calendar/AztecXihuitlCalendar.ts",
+        "src/calendar/BahaiCalendar.ts",
+        "src/calendar/BalinesePawukonCalendar.ts",
+        "src/calendar/ChineseCalendar.ts",
+        "src/calendar/ChineseDayNameCalendar.ts",
+        "src/calendar/CopticCalendar.ts",
+        "src/calendar/EgyptianCalendar.ts",
+        "src/calendar/EthiopicCalendar.ts",
+        "src/calendar/FrenchArithmeticCalendar.ts",
+        "src/calendar/FrenchRevolutionaryCalendar.ts",
+        "src/calendar/GregorianCalendar.ts",
+        "src/calendar/HebrewCalendar.ts",
+        "src/calendar/HebrewObservationalCalendar.ts",
+        "src/calendar/HinduLunarAstroCalendar.ts",
+        "src/calendar/HinduLunarModernCalendar.ts",
+        "src/calendar/HinduLunarOldCalendar.ts",
+        "src/calendar/HinduSolarAstroCalendar.ts",
+        "src/calendar/HinduSolarModernCalendar.ts",
+        "src/calendar/HinduSolarOldCalendar.ts",
+        "src/calendar/IslamicCalendar.ts",
+        "src/calendar/IslamicObservationalCalendar.ts",
+        "src/calendar/IsoWeekCalendar.ts",
+        "src/calendar/JulianCalendar.ts",
+        "src/calendar/MayanCountCalendar.ts",
+        "src/calendar/MayanHaabCalendar.ts",
+        "src/calendar/MayanTzolkinCalendar.ts",
+        "src/calendar/PersianArithmeticCalendar.ts",
+        "src/calendar/PersianAstronomicalCalendar.ts",
+        "src/calendar/RomanCalendar.ts",
+        "src/calendar/TibetanCalendar.ts"
     ]
     /*
     "formatCodeOptions": {
