--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "module": "CommonJS",
-        "target": "es6",
-        "removeComments": true,
-        "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "sourceMap": true,
         "listFiles": true,
-        "outDir": "build/"
+        "module": "CommonJS",
+        "newLine": "LF",
+        "noLib": false,
+        "outDir": "lib/",
+        "removeComments": true,
+        "sourceMap": true,
+        "target": "es6"
     },
     "exclude": [
         "build",
