--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "npm run lint && npm run build:dev",
     "build:dev": "tsc",
-    "clean": "rm -fr lib node_modules spec/lib typings spec/typings",
+    "clean": "rm -fr lib spec/lib",
+    "clean:dist": "rm -fr lib spec/lib node_modules spec/typings",
     "lint": "tslint src/*.ts src/*/*.ts",
     "lint-test": "tslint spec/*.ts spec/*/*.ts",
     "test": "mocha spec/*/*.spec.ts",
