--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "declaration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "listFiles": true,
+        "listFiles": false,
         "module": "CommonJS",
         "newLine": "LF",
         "noLib": false,
