--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -1,13 +1,17 @@
 {
     "compilerOptions": {
+        "allowUnreachableCode": false,
+        "charset": "utf8",
         "declaration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "listFiles": true,
-        "module": "CommonJS",
+        "module": "commonjs",
         "newLine": "LF",
+        "noImplicitAny": true,
         "noLib": false,
         "outDir": "lib/",
+        "pretty": true,
         "removeComments": true,
         "sourceMap": true,
         "target": "es6"
