--- a/.flowconfig
+++ b/.flowconfig
@@ -1,10 +1,20 @@
 [ignore]
 .*/node_modules/.*
+.*/lib/.*.d.ts
+.*/lib/calendar/*.d.ts
+
 
 [include]
 src
 spec
 
 [libs]
+lib
 
 [options]
+module.file_ext=.ts
+module.use_strict=false
+module.system.node.resolve_dirname=node_modules
+module.system=node
+esproposal.class_instance_fields=warn
+esproposal.class_static_fields=ignore
