Stricter TypeScript compiler configuration. Removed unused imports. Commented out unused functions. Cleaned up Mayan Tzolkin and Haab calendars.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
         "module": "commonjs",
         "newLine": "LF",
         "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
         "noLib": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": false,
         "outDir": "lib/",
         "pretty": true,
         "removeComments": true,
