--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,16 @@
         "allowUnreachableCode": false,
         "charset": "utf8",
         "declaration": true,
+        "diagnostics": false,
+        "forceConsistentCasingInFileNames": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "listFiles": false,
         "module": "commonjs",
         "newLine": "LF",
+        "noEmitHelpers": true,
+        "noEmitOnError": true,
+        "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -15,9 +20,11 @@
         "noUnusedLocals": true,
         "noUnusedParameters": false,
         "outDir": "lib/",
+        "preserveConstEnums": true,
         "pretty": true,
         "removeComments": true,
         "sourceMap": true,
+        "strictNullChecks": true,
         "target": "es6"
     },
     "exclude": [
