--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "chai": "~3.5.0",
-    "dirty-chai": "~1.2.2",
-    "mocha": "~3.0.0",
-    "requirejs": "~2.2.0"
+    "chai": "^3.5.0",
+    "dirty-chai": "^1.2.2",
+    "mocha": "^3.0.2",
+    "requirejs": "^2.3.2",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.2"
   }
 }
