Simplify tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "removeComments": true,
         "sourceMap": true,
         "strictNullChecks": true,
+        "stripInternal": true,
         "target": "es6"
     },
     "exclude": [
@@ -32,48 +33,8 @@
         "node_modules",
         "spec"
     ],
-    "files": [
-        "src/Location.ts",
-        "src/Const.ts",
-        "src/Astro.ts",
-        "src/Calendar.ts",
-        "src/index.ts",
-        "src/HinduAlgorithms.ts",
-        "src/calendar/ArmenianCalendar.ts",
-        "src/calendar/AztecTonalpohualliCalendar.ts",
-        "src/calendar/AztecXihuitlCalendar.ts",
-        "src/calendar/BahaiCalendar.ts",
-        "src/calendar/BalinesePawukonCalendar.ts",
-        "src/calendar/ChineseCalendar.ts",
-        "src/calendar/ChineseDayNameCalendar.ts",
-        "src/calendar/CopticCalendar.ts",
-        "src/calendar/EgyptianCalendar.ts",
-        "src/calendar/EthiopicCalendar.ts",
-        "src/calendar/FrenchArithmeticCalendar.ts",
-        "src/calendar/FrenchRevolutionaryCalendar.ts",
-        "src/calendar/GregorianCalendar.ts",
-        "src/calendar/HebrewCalendar.ts",
-        "src/calendar/HebrewObservationalCalendar.ts",
-        "src/calendar/HinduLunarAstroCalendar.ts",
-        "src/calendar/HinduLunarModernCalendar.ts",
-        "src/calendar/HinduLunarOldCalendar.ts",
-        "src/calendar/HinduSolarAstroCalendar.ts",
-        "src/calendar/HinduSolarModernCalendar.ts",
-        "src/calendar/HinduSolarOldCalendar.ts",
-        "src/calendar/IslamicCalendar.ts",
-        "src/calendar/IslamicObservationalCalendar.ts",
-        "src/calendar/IsoWeekCalendar.ts",
-        "src/calendar/JulianCalendar.ts",
-        "src/calendar/MayanCountCalendar.ts",
-        "src/calendar/MayanHaabCalendar.ts",
-        "src/calendar/MayanTzolkinCalendar.ts",
-        "src/calendar/PersianArithmeticCalendar.ts",
-        "src/calendar/PersianAstronomicalCalendar.ts",
-        "src/calendar/RomanCalendar.ts",
-        "src/calendar/Symmetry010Calendar.ts",
-        "src/calendar/Symmetry454Calendar.ts",
-        "src/calendar/TibetanCalendar.ts",
-        "src/calendar/YermCalendar.ts",
-        "src/calendar/index.ts"
+    "include": [
+        "src/*.ts",
+        "src/calendar/*.ts"
     ]
 }
