Simplify tsconfig.json.

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -20,43 +20,9 @@
         "build",
         "node_modules"
     ],
-    "files": [
-        "astro/astro.spec.ts",
-        "calendar/armenian.spec.ts",
-        "calendar/aztec.tonalpohualli.spec.ts",
-        "calendar/aztec.xihuitl.spec.ts",
-        "calendar/bahai.spec.ts",
-        "calendar/balinese.pawukon.spec.ts",
-        "calendar/chinese.day.name.spec.ts",
-        "calendar/chinese.spec.ts",
-        "calendar/coptic.spec.ts",
-        "calendar/ethiopic.spec.ts",
-        "calendar/french.arithmetic.spec.ts",
-        "calendar/french.revolutionary.spec.ts",
-        "calendar/egyptian.spec.ts",
-        "calendar/gregorian.spec.ts",
-        "calendar/hebrew.spec.ts",
-        "calendar/hebrew.observational.spec.ts",
-        "calendar/hindu.lunar.astro.spec.ts",
-        "calendar/hindu.lunar.modern.spec.ts",
-        "calendar/hindu.lunar.old.spec.ts",
-        "calendar/hindu.solar.astro.spec.ts",
-        "calendar/hindu.solar.modern.spec.ts",
-        "calendar/hindu.solar.old.spec.ts",
-        "calendar/islamic.spec.ts",
-        "calendar/islamic.observational.spec.ts",
-        "calendar/isoweek.spec.ts",
-        "calendar/julian.spec.ts",
-        "calendar/mayan.count.spec.ts",
-        "calendar/mayan.haab.spec.ts",
-        "calendar/mayan.tzolkin.spec.ts",
-        "calendar/persian.arithmetic.spec.ts",
-        "calendar/persian.astronomical.spec.ts",
-        "calendar/roman.spec.ts",
-        "calendar/symmetry010.spec.ts",
-        "calendar/symmetry454.spec.ts",
-        "calendar/tibetan.spec.ts",
-        "calendar/yerm.spec.ts"
+    "include": [
+        "astro/*.spec.ts",
+        "calendar/*.spec.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
