--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "clean:dist": "rm -fr .vscode lib spec/lib node_modules spec/typings",
     "flow:check": "flow check --color=always --all --show-all-errors --profile",
     "flow:suggest": "flow suggest src/*.ts src/calendar/*.ts",
-    "lint": "tslint src/*.ts src/*/*.ts",
-    "lint:test": "tslint spec/*.ts spec/*/*.ts",
-    "test": "npm run lint:test && mocha spec/*/*.spec.ts",
+    "lint": "tslint -p tslint.json src/*/*.ts",
+    "lint:test": "tslint -p tslint.json spec/*/*.ts",
+    "test": "npm run lint:test && mocha -r ts-node/register spec/*/*.spec.ts",
     "postinstall": "tsc"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^2.2.46",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
+    "flow-bin": "^0.63.1",
     "mocha": "^4.1.0",
-    "requirejs": "^2.3.5",
+    "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
   }
