Stricter linting, show diagnostics.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "baseUrl": "",
         "charset": "utf8",
         "declaration": true,
-        "diagnostics": false,
+        "diagnostics": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
@@ -33,6 +33,8 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "sourceRoot": "./src",
+        "strict": true,
+        "strictFunctionTypes": true,
         "strictNullChecks": true,
         "stripInternal": true,
         "target": "es6",
