--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,55 +1,50 @@
 {
-    "compilerOptions": {
-        "allowUnreachableCode": false,
-        "baseUrl": "",
-        "charset": "utf8",
-        "declaration": true,
-        "diagnostics": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "forceConsistentCasingInFileNames": true,
-        "lib": [
-            "es2017"
-        ],
-        "listFiles": false,
-        "mapRoot": "",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "newLine": "LF",
-        "noEmitHelpers": true,
-        "noEmitOnError": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noLib": false,
-        "noUnusedLocals": true,
-        "noUnusedParameters": false,
-        "outDir": "lib/",
-        "preserveConstEnums": true,
-        "pretty": true,
-        "removeComments": true,
-        "rootDir": "./src",
-        "skipLibCheck": true,
-        "sourceMap": true,
-        "sourceRoot": "./src",
-        "strict": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "stripInternal": true,
-        "target": "es6",
-        "typeRoots": [
-            "./node_modules/@types"
-        ],
-        "types": []
-    },
-    "exclude": [
-        "lib",
-        "node_modules",
-        "src/spec"
+  "compilerOptions": {
+    "allowUnreachableCode": false,
+    "baseUrl": "",
+    "charset": "utf8",
+    "declaration": true,
+    "diagnostics": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": [
+      "es2016",
+      "es2017",
+      "es2017.object",
+      "esnext.asynciterable",
+      "dom"
     ],
-    "include": [
-        "src/*.ts",
-        "src/calendar/*.ts"
-    ]
+    "listFiles": false,
+    "mapRoot": "",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "newLine": "LF",
+    "noEmitHelpers": true,
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noLib": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "outDir": "lib/",
+    "preserveConstEnums": true,
+    "pretty": true,
+    "removeComments": true,
+    "rootDir": "./src",
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "sourceRoot": "./src",
+    "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "stripInternal": true,
+    "target": "es6",
+    "typeRoots": ["node_modules/@types"],
+    "types": ["jest"]
+  },
+  "exclude": ["lib", "node_modules", "src/jest-*.ts", "src/spec"],
+  "include": ["src/*.ts", "src/calendar/*.ts"]
 }
