--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "calendariale",
-  "version": "0.5.0",
+  "version": "0.5.9",
   "description": "Calendrical calculations library in TypeScript",
   "repository": "catull/calendariale",
-  "main": "index.js",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "umd:main": "dist/index.umd.js",
+  "module": "dist/index.mjs",
+  "source": "src/index.ts",
   "scripts": {
     "build": "yarn lint && yarn build:dev",
     "build:dev": "tsc",
-    "clean": "rm -fr lib tmp",
-    "clean:dist": "rm -fr lib tmp clean .vscode node_modules spec/typings",
+    "clean": "rm -fr .rts2_cache_* dist tmp",
+    "clean:dist": "rm -fr .rts2_cache_* dist tmp node_modules",
+    "dist": "yarn dist:mb && yarn dist:package.json",
+    "dist:package.json": "mkdir -p dist && ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
+    "dist:mb": "microbundle",
     "test": "jest",
     "test:dev": "jest --watch",
     "test:prod": "jest --silent --coverage --runInBand",
     "format": "prettier 'src/**/*.[jt]s' --write --list-different --loglevel warn",
     "format:lib": "prettier 'lib/**/*.[jt]s' --write --list-different --loglevel warn",
     "lint": "tslint -p tslint.json",
-    "lint:test": "tslint -p tslint.json src/spec/*/*.ts",
-    "postinstall": "tsc"
+    "lint:test": "tslint -p tslint.json src/spec/*/*.ts"
   },
-  "author": "",
+  "author": "catull@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "@types/jest": "23.3.10",
+    "@types/node": "^10.12.15",
     "jest": "23.6.0",
     "jest-junit": "5.2.0",
     "jest-sonar-reporter": "2.0.0",
+    "microbundle": "^0.8.3",
     "prettier": "1.15.3",
     "ts-jest": "23.10.5",
     "ts-node": "7.0.1",
