--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "build:dev": "tsc",
     "clean": "rm -fr .rts2_cache_* dist tmp",
     "clean:dist": "rm -fr .rts2_cache_* dist tmp node_modules",
-    "dist": "yarn dist:mb && yarn dist:package.json",
+    "dist": "yarn build && yarn dist:package.json",
     "dist:package.json": "mkdir -p dist && ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
-    "dist:mb": "microbundle",
     "test": "jest",
     "test:dev": "jest --watch",
     "test:prod": "jest --silent --coverage --runInBand",
@@ -35,7 +34,6 @@
     "jest": "23.6.0",
     "jest-junit": "5.2.0",
     "jest-sonar-reporter": "2.0.0",
-    "microbundle": "0.8.3",
     "prettier": "1.15.3",
     "ts-jest": "23.10.5",
     "ts-node": "7.0.1",
