--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "source": "src/index.ts",
   "scripts": {
     "build": "yarn lint && yarn build:dev",
-    "build:dev": "tsc",
-    "clean": "rm -fr .rts2_cache_* dist tmp",
-    "clean:dist": "rm -fr .rts2_cache_* dist tmp node_modules",
-    "dist": "yarn dist:index.ts && yarn build && yarn dist:package.json",
-    "dist:index.ts": "barrelsby -D -q -l all -d src -e src/spec -e create-dist",
+    "build:dev": "yarn prebuild && tsc",
+    "prebuild": "barrelsby -D -q -l all -d src -e src/spec -e create-dist",
+    "clean": "rimraf -fr dist tmp",
+    "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
+    "clean:dist": "rimraf -fr .rts2_cache_* dist tmp \"./src/**/index.ts\" node_modules",
+    "dist": "yarn prebuild && yarn build && yarn dist:package.json",
     "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
     "test": "jest",
     "test:dev": "jest --watch",
@@ -37,9 +38,10 @@
     "jest-junit": "6.0.1",
     "jest-sonar-reporter": "2.0.0",
     "prettier": "1.15.3",
+    "rimraf": "2.6.3",
     "ts-jest": "23.10.5",
     "ts-node": "7.0.1",
-    "tslint": "5.12.0",
+    "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-sonarts": "1.8.0",
