--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prebuild": "barrelsby -D -q -l all -d src -e src/spec -e create-dist",
     "clean": "rimraf -fr dist tmp",
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
-    "clean:dist": "rimraf -fr .rts2_cache_* dist tmp \"./src/**/index.ts\" node_modules",
-    "dist": "yarn prebuild && yarn build && yarn dist:package.json",
+    "clean:dist": "rimraf -fr .rts2_cache_* dist tmp 'src/**/index.ts' node_modules",
+    "dist": "yarn build && yarn dist:package.json",
     "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
     "test": "jest",
     "test:dev": "jest --watch",
