--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
     "barrelsby": "1.0.2",
-    "jest": "23.6.0",
+    "jest": "24.0.0",
+    "jest-environment-jsdom-thirteen": "0.0.2",
     "jest-junit": "6.1.0",
     "jest-sonar-reporter": "2.0.0",
     "prettier": "1.16.1",
